force-app/main/default/objects/User/fields/Business_Development_User__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Development User</label>
    <type>Checkbox</type>
</CustomField>