force-app/main/default/objects/User/fields/Calendly_Link__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Link__c</fullName>
    <description>Used in email templates</description>
    <label>Calendly Link</label>
    <type>Url</type>
</CustomField>