force-app/main/default/objects/User/fields/Calendly_Phone_Link__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Phone_Link__c</fullName>
    <label>Calendly Phone Link</label>
    <type>Url</type>
</CustomField>