force-app/main/default/objects/User/fields/Calendly_Video_Link__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Video_Link__c</fullName>
    <label>Calendly Video Link</label>
    <type>Url</type>
</CustomField>