force-app/main/default/objects/User/fields/CASESAFEID__c.field-meta.xml
<CustomField>
    <fullName>CASESAFEID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CASESAFEID</label>
    <type>Text</type>
</CustomField>