force-app/main/default/objects/User/fields/H1__c.field-meta.xml
<CustomField>
    <fullName>H1__c</fullName>
    <label>H1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>