force-app/main/default/objects/User/fields/H2__c.field-meta.xml
<CustomField>
    <fullName>H2__c</fullName>
    <label>H2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>