force-app/main/default/objects/User/fields/Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type__c</fullName>
    <description>First available phone for users in Workday as Public Primary Phone. Values include Mobile, Landline, etc.</description>
    <label>Phone Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>