force-app/main/default/objects/User/fields/Workday_Company__c.field-meta.xml
<CustomField>
    <fullName>Workday_Company__c</fullName>
    <description>Field is populated by OKTA from Workday when a new user is added</description>
    <label>Workday Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>