force-app/main/default/objects/User/fields/Workday_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Workday_Cost_Center__c</fullName>
    <label>Workday Cost Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>