force-app/main/default/objects/User/fields/Workday_Page__c.field-meta.xml
<CustomField>
    <fullName>Workday_Page__c</fullName>
    <formula>HYPERLINK( Workday_User_URL__c , &quot;Click here to find me in Workday&quot;)</formula>
    <label>Workday Page</label>
    <type>Text</type>
</CustomField>