force-app/main/default/objects/User/fields/Workday_User_URL__c.field-meta.xml
<CustomField>
    <fullName>Workday_User_URL__c</fullName>
    <description>URL to Workday User&apos;s page</description>
    <label>Workday User URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>