force-app/main/default/objects/User/listViews/Active_Accounting_Users.listView-meta.xml
<ListView>
    <fullName>Active_Accounting_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>Territory__c</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>Workday_Company__c</columns>
    <columns>Workday_Cost_Center__c</columns>
    <columns>Default_Region__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Workday_Cost_Center__c</field>
        <operation>contains</operation>
        <value>accounting</value>
    </filters>
    <label>Active Accounting Users</label>
</ListView>