force-app/main/default/objects/User/listViews/LSC.listView-meta.xml
<ListView>
    <fullName>LSC</fullName>
    <booleanFilter>(1 AND 2) OR (2 AND (3 OR 4))</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.DIVISION</field>
        <operation>equals</operation>
        <value>Laundry Service Cycle</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>247laundryservices.com</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>cycle.media</value>
    </filters>
    <label>LSC</label>
</ListView>